<resources>
    <string name="app_name">Github</string>
    <string name="username">Username</string>
    <string name="name">nama</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">repository</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>